[gd_scene load_steps=11 format=3 uid="uid://cbbf1sclpb2aw"]

[ext_resource type="Texture2D" uid="uid://boqax66a0370t" path="res://assets/textures/tilemap_packed.png" id="1_3uyx6"]
[ext_resource type="Script" uid="uid://506gqxshcsc7" path="res://scripts/hero.gd" id="1_yvbpl"]
[ext_resource type="AudioStream" uid="uid://nqtmve802aja" path="res://assets/sfx/ES_Game, Retro, 8 Bit, Hit Hurt 28 - Epidemic Sound.ogg" id="3_5c32n"]
[ext_resource type="AudioStream" uid="uid://bcavcptaq0pqo" path="res://assets/sfx/ES_Running On Sand - Epidemic Sound_loop.ogg" id="4_grqlp"]
[ext_resource type="Texture2D" uid="uid://bajiscbpr50" path="res://resources/plus_max_life_texture.tres" id="5_j4403"]
[ext_resource type="Texture2D" uid="uid://cktwej70afwd6" path="res://resources/sword_texture.tres" id="6_1t6pq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5c32n"]
radius = 3.0
height = 14.0

[sub_resource type="Animation" id="Animation_gb3xs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Powerup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Powerup:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Powerup:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}

[sub_resource type="Animation" id="Animation_1t6pq"]
resource_name = "acquire_powerup"
length = 1.5
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Powerup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Powerup:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.43333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Powerup:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -12), Vector2(0, -23)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vj8j2"]
_data = {
&"RESET": SubResource("Animation_gb3xs"),
&"acquire_powerup": SubResource("Animation_1t6pq")
}

[node name="Hero" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_yvbpl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3uyx6")
offset = Vector2(0, -6)
region_enabled = true
region_rect = Rect2(0, 112, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_5c32n")

[node name="RangeAttackPos" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, -4)

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(-6, -11, -7, -3, -7, 0, -4, 1, 3, 1, 7, 0, 7, -3, 5, -5, 6, -6, 6, -9, 0, -13, -4, -13)

[node name="SFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_5c32n")
volume_db = -10.0
bus = &"sfx"

[node name="MovingSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_grqlp")
volume_db = -10.0
bus = &"sfx"

[node name="Powerup" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -23)
texture = ExtResource("5_j4403")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_vj8j2")
}

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1, -4)

[node name="MeleeWeapon" type="Sprite2D" parent="Marker2D"]
unique_name_in_owner = true
position = Vector2(7, 0)
texture = ExtResource("6_1t6pq")
offset = Vector2(0, -5)

[node name="WeaponRange" type="Area2D" parent="Marker2D/MeleeWeapon"]
position = Vector2(-7, 0)
collision_layer = 0
collision_mask = 4

[node name="SwordCollision" type="CollisionPolygon2D" parent="Marker2D/MeleeWeapon/WeaponRange"]
unique_name_in_owner = true
polygon = PackedVector2Array(3, -11, 5, -13, 9, -13, 11, -11, 11, -1, 3, -1)
disabled = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="Marker2D/MeleeWeapon/WeaponRange" to="." method="_on_weapon_range_area_entered"]
[connection signal="body_entered" from="Marker2D/MeleeWeapon/WeaponRange" to="." method="_on_weapon_range_area_entered"]
